--------------------------------------------------------------------------------
Changes for 2.0.0rc3

New features:
..F....... [ZBXNEXT-1153] support for nested templates in import (Vedmak)
..F....... [ZBX-1357] updated French, German, Greek, Japanese, Polish, Russian and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-4784] fixed inherited triggers are updated on any host update (Vedmak)
........S. [ZBX-4824] fixed memory leak while switching item to not supported status (Sasha)
..F....... [ZBX-4830] fixed error when try to create item without host (Vedmak)
..F....... [ZBX-4676] fixed link to triggers from dashboard 'system status' widget not reset host filter (Vedmak)
..F....... [ZBX-4568] fixed new host groups not populated with selected group when 'remember selected' is disabled in GUI settings (Vedmak)
..F....... [ZBX-4583] fixed possible processing of null as object in CUIwidget (Vedmak)
..F....... [ZBX-4740] fixed host filter when switch to 'configuration of items' from other host configuration page (Vedmak)
...G...... [ZBX-4195] fixed memory leak while processing unsupported performance counters by Windows agent (Sasha)
....I..P.. [ZBX-4780] removed vfs.fs.discovery returned value limit in case of proxy (dimir)
...G...... [ZBX-4802] improved memory de-allocation code clarity (Andris)
..F....... [ZBX-4739] fixed mass update failing with many items selected (Toms)
..F....... [ZBX-4821] fixed flexible interval update using item mass update form (Vedmak)
..F....... [ZBX-4806] fixed "New flexible interval" not shown in item form (Toms)
A.F....... [ZBX-4790] fixed *EROR*s in trigger expressions in items.php; fixed undefined variables when filtering without host (Toms)
..F....... [ZBX-3725] added check for xml file size exceeds upload_max_filesize php setting (Vedmak)
A.F....... [ZBX-3991] forbid passive proxy interfaces with ip 0.0.0.0 (Vedmak)