@@ -43,19 +43,20 @@ function call_ins_macro_menu(ev) {
 	show_popup_menu(ev,
 		[
 			[locale['S_INSERT_MACRO'], null, null, {'outer' : ['pum_oheader'], 'inner' : ['pum_iheader']}],
-			['TRIGGER.VALUE=0', 'javascript: set_macro(0);',
+			['TRIGGER.VALUE=0', function() { set_macro(0); },
 			null, {'outer' : ['pum_o_item'], 'inner' : ['pum_i_item']}],
-			['TRIGGER.VALUE=1', 'javascript: set_macro(1);',
+			['TRIGGER.VALUE=1', function() { set_macro(1); },
 			null, {'outer' : ['pum_o_item'], 'inner' : ['pum_i_item']}],
-			['TRIGGER.VALUE=2', 'javascript: set_macro(2);',
+			['TRIGGER.VALUE=2', function() { set_macro(2); },
 			null, {'outer' : ['pum_o_item'], 'inner' : ['pum_i_item']}],
-			['TRIGGER.VALUE#0', 'javascript: set_macro(10);',
+			['TRIGGER.VALUE#0', function() { set_macro(10); },
 			null, {'outer' : ['pum_o_item'], 'inner' : ['pum_i_item']}],
-			['TRIGGER.VALUE#1', 'javascript: set_macro(11);',
+			['TRIGGER.VALUE#1', function() { set_macro(11); },
 			null, {'outer' : ['pum_o_item'], 'inner' : ['pum_i_item']}],
-			['TRIGGER.VALUE#2', 'javascript: set_macro(12);',
-			null, {'outer' : ['pum_o_item'], 'inner' : ['pum_i_item']}],
+			['TRIGGER.VALUE#2', function() { set_macro(12); },
+			null, {'outer' : ['pum_o_item'], 'inner' : ['pum_i_item']}]
 		], 150);
+
 	return false;
 }
 
@@ -497,9 +498,9 @@ function copy_expression(id) {
 }
 
 function set_macro(v) {
-	var expr_temp = document.getElementsByName('expr_temp')[0];
-	if (expr_temp.value.length > 0 && !confirm(locale['DO_YOU_REPLACE_CONDITIONAL_EXPRESSION_Q'])) {
-		return null;
+	var expr_temp = jQuery('#expr_temp');
+	if (expr_temp.val().length > 0 && !confirm(locale['DO_YOU_REPLACE_CONDITIONAL_EXPRESSION_Q'])) {
+		return false;
 	}
 
 	var sign = '=';
@@ -507,7 +508,9 @@ function set_macro(v) {
 		v %= 10;
 		sign = '#';
 	}
-	expr_temp.value = '{TRIGGER.VALUE}' + sign + v;
+	expr_temp.val('{TRIGGER.VALUE}' + sign + v);
+
+	return true;
 }
 
 /*
